# jwt-service

./: .gitignore  .mypy.ini  .ruff.toml  alembic.ini  pyproject.toml
config/: config.example.toml
src/app/application/commands/auth/: login_user.py  refresh_token.py  register_user.py
src/app/application/common/dto/: base.py  user.py
src/app/application/errors/: auth.py  base.py
src/app/application/interfaces/: interactor.py
src/app/application/interfaces/auth/: identity_provider.py  jwt_provider.py  password_hasher.py
src/app/application/interfaces/common/: transaction_manager.py
src/app/application/interfaces/user/: repository.py
src/app/application/queries/auth/: get_me.py
src/app/application/queries/user/: get_by_username.py  get_me.py
src/app/domain/entities/: base.py  user.py
src/app/domain/enums/: user_role.py
src/app/infrastructure/auth/: identity_provider.py  jwt_provider.py  password_hasher.py
src/app/infrastructure/database/: mapper.py  transaction_manager.py
src/app/infrastructure/database/migrations/: env.py
src/app/infrastructure/database/models/: __init__.py  base.py  user.py
src/app/infrastructure/database/repositories/: base_repository.py  user_repository.py
src/app/main/: api.py
src/app/main/configs/: api.py  base.py  config.py  database.py  jwt.py  toml_loader.py
src/app/main/di/: container.py
src/app/main/di/providers/: auth.py  config.py  database.py  interactor.py  repository.py
src/app/presentation/api/: dependencies.py  error_handler.py
src/app/presentation/api/routers/: auth.py  root.py  user.py
(+8 files in other folders)
